src/objects/Sales_Event_Feedback_Questions__c.object
<CustomObject>
    <fields>
        <fullName>Answer__c</fullName>
        <label>Answer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Domain_Expertise_Score__c</fullName>
        <formula>if( Question_Section__c==&apos;Domain Expertise&apos;,(if(Answer__c==&apos;Negative&apos;,-1,(if(Answer__c==&apos;Positive&apos;,1,0)))),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Domain Expertise Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Feedback_Questions__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Feedback Questions</label>
        <referenceTo>Feedback_Questions__c</referenceTo>
        <relationshipLabel>Sales Event Feedback Questions</relationshipLabel>
        <relationshipName>Sales_Event_Feedback_Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Feedback_Score__c</fullName>
        <label>Feedback Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Negative_In_Domain_Expertise__c</fullName>
        <formula>if( Question_Section__c==&apos;Domain Expertise&apos;,(if(Answer__c==&apos;Negative&apos;,true,false)),false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Negative In Domain Expertise</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Negative_In_Preparation__c</fullName>
        <formula>if( Question_Section__c==&apos;Preparation&apos;,(if(Answer__c==&apos;Negative&apos;,true,false)),false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Negative In Preparation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Negative_In_Selling_Skill__c</fullName>
        <formula>if( Question_Section__c==&apos;Selling Skill&apos;,(if(Answer__c==&apos;Negative&apos;,true,false)),false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Negative In Selling Skill</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Presentation_Section_Score__c</fullName>
        <formula>if( Question_Section__c==&apos;Preparation&apos;,(if(Answer__c==&apos;Negative&apos;,-1,(if(Answer__c==&apos;Positive&apos;,1,0)))),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Presentation Section Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Question_Section__c</fullName>
        <label>Question Section</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Event_Feedback__c</fullName>
        <label>Sales Event Feedback</label>
        <referenceTo>Sales_Event_Feedback__c</referenceTo>
        <relationshipLabel>Sales Event Feedback Questions</relationshipLabel>
        <relationshipName>Sales_Event_Feedback_Questions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sales_Event__c</fullName>
        <formula>Sales_Event_Feedback__r.Sales_Event__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Event</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Selling_Skill_Score__c</fullName>
        <formula>if( Question_Section__c==&apos;Selling Skill&apos;,(if(Answer__c==&apos;Negative&apos;,-1,(if(Answer__c==&apos;Positive&apos;,1,0)))),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Selling Skill Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Sales Event Feedback Questions</label>
    <nameField>
        <displayFormat>SEFQ-{0000}</displayFormat>
        <label>Sales Event Feedback Questions Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Event Feedback Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>